css/style.css
@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,500;0,700;1,500;1,700&display=swap');

:root {
    /* colors */
    --Almost-White: hsl(0, 0%, 98%);
    --Medium-Gray: hsl(0, 0%, 41%);
    --Almost-Black: hsl(0, 0%, 8%);

}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
}


#app {
    min-height: 100vh;
    font-family: 'Epilogue';
    font-size: 1rem;

    display: grid;
    grid-template-rows: repeat(3fr);
    grid-template-columns: 1fr;
    grid-template-areas: 
    "navbar"
    "main"
    "footer";
}

/*-----grid-areas----*/
.navbar {
    grid-area: 'navbar';  
}

.main {
    grid-area: 'main';
}

.footer {
    grid-area: 'footer';
}

/*------navbar-------*/

.navbar {
    min-height: 2.1rem;
    padding: 1rem;
    display: flex;
    position: relative;
    justify-content: space-between;
    
}

.navbar__logo {
    content: url('/images/logo.svg');
    width: 87px;
    height:35px;
}

.navbar__menu {
    background: url('/images/icon-menu.svg') no-repeat;
    border: none;
    background-color: transparent;
    width: 32px;
    height: 18px;
}

.navbar__menu:hover {
    cursor: pointer;
}

.navbar-links {
    height: 100%;
    position: fixed;
    width: 0;
    background-color: var(--Almost-White);
    z-index: 1;
    top: 0;
    right: 0;
    overflow-x: hidden;
    padding-top: 78px;
    transition: 0.5s;
}

.navbar-links a {
    color: var(--Medium-Gray);
}

.navbar-options {
    min-width: 195px;
}

.navbar-options__link {
    margin: 0 145px 24px 24px;
    display: block;
    transition: 0.3s;
}

.navbar-options__link:hover {
    color: var(--Almost-Black);
    padding: .2rem;
    transition: 0.5s;
}

.navbar-options__link--dropdown {
    width: 100px;
    display: flex;
    justify-content: space-between;
}

.navbar-options__link--dropdown::after {
    content: url("/images/icon-arrow-down.svg");
}

.navbar-options__close {
    position: absolute;
    top: 0;
    left: 25px;
    font-size: 36px;
    margin: 21px 20px 0 175px;
    content: url('/images/icon-close-menu.svg');
}

.navbar-options__close:hover {
    border: 1px solid var(--Almost-Black);
    border-radius: .2rem;
    padding: .2rem;
    transition: 0.5s;
}

.navbar-account {
    margin-top: 32px;
}

.navbar-account__link {
    min-width: 195px;
    min-height: 42px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar-account__link--outline {
    border: 1px solid var(--Medium-Gray);
    border-radius: .9rem;
}

.navbar-account__link--outline:hover {
    border: 1px solid var(--Almost-Black);
    transition: 0.5s;
    color: var(--Almost-Black);
}

.show-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: 0.9s;
}

.hide-menu {
    display: none;
    transition: 0.9s;
}

.navbar-dropdown-menu__link {
    width: 106px;
    display: flex;
    gap: .9rem;
    margin-bottom: 1rem;
}

.navbar-dropdown-menu__link:hover {
    padding-left: 6px;
    transition: 0.5s;
}

.menu__link--todo::before {
    content: url('/images/icon-todo.svg');
}

.menu__link--calendar::before {
    content: url('/images/icon-calendar.svg');
}

.menu__link--reminder::before {
    content: url('/images/icon-reminders.svg');
}

.menu__link--planning::before {
    content: url('/images/icon-planning.svg');
}

.navbar-account {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/*-------main-content-------*/

.main {

}

.main-image {
    min-height: 281px;
}

.main-image__hero {

}

.main-content {
    min-height: 208px;
    padding: 48px 16px  48px 16px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}


.main-content__header {
   font-size: 2.1rem;
}


.main-content__text {
    text-align: center;
    font-size: 1rem;
    color: var(--Medium-Gray);
    margin: 24px 0;
}


.main-content__button {
    width: 136px;
    background-color: var(--Almost-Black);
    padding: 12px 24px;
    color: var(--Almost-White);
    border-radius: .9rem ;
}

.footer-supporters {
    display: flex;
    justify-content: space-evenly;
}

.footer-attribution {
    display: flex;
    flex-direction: column;
    align-items: center;
}




@media screen and (min-width: 768px) {
    
}

